--- a/README
+++ b/README
@@ -1,1 +1,3 @@
-This project is seriously awesome guys
+This project is totally awesome guys
+
+This project will help Treehouse students learn how to commit
